--- a/index.html
+++ b/index.html
@@ -9,25 +9,22 @@
       height: 100%;
       margin: 0;
       background-color: rgb(255, 255, 255);
-      cursor: none; /* Hide default mouse cursor */
+      cursor: none;
       position: relative;
     }
-
     .custom-cursor {
       position: absolute;
       font-size: 18px;
       color: rgb(0, 0, 0);
       pointer-events: none;
-      z-index: 3; /* Above the canvas but below the GIF */
+      z-index: 3;
     }
-
     .text {
       position: absolute;
       font-size: 22px;
       color: rgb(0, 0, 0);
-      z-index: 4; /* Above the canvas but below the GIF */
+      z-index: 4;
     }
-
     canvas {
       position: absolute;
       top: 0;
@@ -35,9 +32,8 @@
       width: 100%;
       height: 100%;
       pointer-events: none;
-      z-index: 2; /* Lowest z-index */
+      z-index: 2;
     }
-
     #explosionGif {
       position: absolute;
       top: 50%;
@@ -45,38 +41,29 @@
       transform: translate(-50%, -50%);
       width: 70%;
       display: none;
-      z-index: 1000; /* Highest z-index to be on top of everything */
-      pointer-events: none; /* Ensure GIF does not interfere with mouse events */
+      z-index: 1000;
+      pointer-events: none;
     }
-
     .falling-element {
-      display: inline-block; /* Ensures elements are inline for letter wrapping */
+      display: inline-block;
       transition: transform 1s ease-in;
     }
-
     .letter {
-      display: inline-block; /* Ensures letters are inline for shaking */
+      display: inline-block;
     }
   </style>
 </head>
 <body>
-
   
-
-  <!-- Image element for the bomb explosion GIF -->
   <img id="explosionGif" src="cose/explosion.gif" alt="Explosion GIF">
-
-  <!-- Audio elements for the click sound and explosion sound -->
   <audio id="clickSound" src="cose/click.mp3" preload="auto"></audio>
-  <audio id="explosionSound" src="cose/explosion.mp3" preload="auto"></audio> <!-- New explosion sound -->
-
+  <audio id="explosionSound" src="cose/explosion.mp3" preload="auto"></audio>
   <div id="index">
     <div class='container'>
       <canvas id="lineCanvas" class="line"></canvas>
-  <div id="cursor" class="custom-cursor"></div>
+      <div id="cursor" class="custom-cursor"></div>
     </div>
   </div>
-
   <script src="js/script.js"></script>
 </body>
 </html>
